Merge test_arraylist
# Conflicts:
#	Snake/src/main/Snake.java